@@ -9,7 +9,7 @@
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta name="robots" content="all" />
 	<meta name="author" content="Grant Hutchinson" />
-	<meta name="copyright" content="Copyright 2006-2007 Grant Hutchinson" />
+	<meta name="copyright" content="Copyright 2006-2012 Grant Hutchinson" />
 	<meta name="description" content="Newton Personal Data Sharing Documentation" />
 	<meta name="keywords" content="newton, apple, messagepad, emate, npds, server, web server, serving, software, modules, source code, grant hutchinson, stewpot, sbm, sbm utilities, soup, editing" />
 	<link rel="stylesheet" type="text/css" href="/ssi/docs.css" media="screen" />
