@@ -18,7 +18,7 @@
 	</ul>
 
 	<p>Valid <a href="http://validator.w3.org/check/referer" title="What about yours?">XHTML 1.0 Strict</a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" title="Got style?">CSS</a></p>
-	<p>Copyright &#169; 2002-2011 Matt Vaughn, Paul Guyot, Victor Rehorst, Grant Hutchinson, Josh Burker, et al.</p>
+	<p>Copyright &#169; 2002-2012 Matt Vaughn, Paul Guyot, Victor Rehorst, Grant Hutchinson, Josh Burker, et al.</p>
 </div>
 
 <script type="text/javascript" src="http://include.reinvigorate.net/re_.js"></script>
